@@ -4,12 +4,13 @@ copyright_holder    = Karen Etheridge
 copyright_year      = 2013
 license             = Perl_5
 
-[ModuleShareDirs]
-Dist::Zilla::MintingProfile::Author::ETHER = profiles
-
 [GatherDir::Template / profile.ini]
 root   = profiles/github/build_templates
-prefix = profiles/github
+prefix = share/profiles/github
+
+[GatherDir / minting profile configs]
+root = profiles
+prefix = share/profiles
 
 [Prereqs / PluginBundle (direct)]
 -phase = runtime
@@ -204,3 +205,4 @@ x_MailingList = http://dzil.org/#mailing-list
 installer = MakeMaker
 MetaNoIndex.directory[] = profiles
 Test::MinimumVersion.max_target_perl = 5.014000
+Git::GatherDir.exclude_match = ^profiles/   ; we already moved it to share/
