@@ -4,8 +4,26 @@ package Dist::Zilla::MintingProfile::Author::ETHER;
 # ABSTRACT: Mint distributions like ETHER does
 
 use Moose;
-with 'Dist::Zilla::Role::MintingProfile::ShareDir';
+with 'Dist::Zilla::Role::MintingProfile';
+use File::ShareDir;
+use Path::Class;        # sadly, we still need to use Path::Class :(
+use Carp;
 use namespace::autoclean;
+
+sub profile_dir
+{
+    my ($self, $profile_name) = @_;
+
+    # I'd template this as '{{ $dist->name }}', except [GatherDir::Template]
+    # uses FromCode files, which prevents other munging, e.g. PodWeaver
+    my $dist_name = 'Dist-Zilla-PluginBundle-Author-ETHER';
+    my $profile_dir = dir( File::ShareDir::dist_dir($dist_name) )
+                      ->subdir( 'profiles', $profile_name );
+
+    return $profile_dir if -d $profile_dir;
+
+    confess "Can't find profile $profile_name via $self: it should be in $profile_dir";
+}
 
 __PACKAGE__->meta->make_immutable;
 __END__
