@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
           - ensure that .pod files are also eligible for indexing
+          - minting profile switched to using a dist sharedir to store
+            profiles
 
 0.045     2014-01-06 18:32:05Z
           - fixed transposed link text in documentation (thanks, rwstauner!)
